Admin dashboard manage accounts file

--- a/views/admin_dashboard-manage_accounts.hbs
+++ b/views/admin_dashboard-manage_accounts.hbs
@@ -1,3 +1,129 @@
+
+<div style="margin-top: 30px;margin-bottom: 50px;">
+      <div class="container-fluid">
+          <div class="row">
+              <div class="col-md-12 offset-xl-1" style="margin-top: 25px;height: 90px;margin-bottom: 10px;">
+                  <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {userName}!</strong></h1>
+              </div>
+          </div>
+          <div class="row justify-content-center align-items-center" style="height: 100%;">
+              <div class="col-auto col-sm-11 col-md-9 col-lg-9 col-xl-11 text-break text-center align-self-center m-auto" style="padding: 5px;padding-left: 40px;">
+                  <div class="card">
+                      <div class="card-header">
+                          <ul class="nav nav-tabs card-header-tabs">
+                              <li class="nav-item"><a class="nav-link" href="/login" style="font-size: 20px;">Dashboard</a></li>
+                              <li class="nav-item"><a class="nav-link" href="/admin_dashboard/manage_inventory" style="font-size: 20px;">Manage Inventory</a></li>
+                              <li class="nav-item"><a class="nav-link" href="/admin_dashboard/manage_orders" style="font-size: 20px;">Manage Order(s)</a></li>
+                              <li class="nav-item"><a class="nav-link active" href="/admin_dashboard/manage_accounts" style="font-size: 20px;">Manage Accounts</a></li>
+                          </ul>
+                      </div>
+                      <div class="card-body">
+                          <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Manage Accounts</h4>
+                          <div class="col align-self-center m-auto">
+                              <div class="table-responsive" style="margin-top: 40px;padding: 10px;">
+                                  <table class="table table-hover">
+                                      <thead>
+                                          <tr>
+                                              <th>ID</th>
+                                              <th>First Name</th>
+                                              <th>Last Name</th>
+                                              <th>E-Mail</th>
+                                              <th>City</th>
+                                              <th>State</th>
+                                          </tr>
+                                      </thead>
+                                      <tbody>
+                                          <tr>
+                                              <td>Cell 1</td>
+                                              <td>Cell 2</td>
+                                              <td>Cell 2</td>
+                                              <td>Cell 2</td>
+                                              <td>Cell 5</td>
+                                              <td>Cell 6</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 5</td>
+                                              <td>Cell 6</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 5</td>
+                                              <td>Cell 6</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 5</td>
+                                              <td>Cell 6</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 5</td>
+                                              <td>Cell 6</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 5</td>
+                                              <td>Cell 6</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 5</td>
+                                              <td>Cell 6</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 5</td>
+                                              <td>Cell 6</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 5</td>
+                                              <td>Cell 6</td>
+                                          </tr>
+                                          <tr>
+                                              <td>Cell 3</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 4</td>
+                                              <td>Cell 5</td>
+                                              <td>Cell 6</td>
+                                          </tr>
+                                      </tbody>
+                                  </table>
+                              </div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
+
 <input type=button value="logout" onClick="eraseCookie()"/>
 <h2> ADMIN ACCOUNT ACCOUNTS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
