--- a/views/admin_dashboard-manage_inventory-sub_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory-sub_inventory.hbs
@@ -1,3 +1,29 @@
+
+
+<!--This is create inventory and sub-->
+
+<header></header><a href="userDashboard.html" style="margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);font-size: 20px;">Back To Inventory</a>
+  <div class="container-fluid text-center border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;max-width: 960px;padding-top: 15px;padding-bottom: 15px;padding-right: 50px;padding-left: 50px;">
+      <h5 class="text-left" style="color: rgb(133,135,150);font-size: 28px;height: 90px;padding-top: 30px;"><strong>Inventory Item</strong></h5>
+      <div class="row">
+          <div class="col text-left">
+              <form>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Item ID:</strong><input class="form-control" type="number" id="itemID" required="" min="0" step="1" placeholder="Item ID"></label></div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Merchant ID:</strong><input class="form-control" type="number" id="merchantID" min="0" step="1" required="" placeholder="Merchant ID"></label></div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Item Name:</strong><br><input class="form-control" type="text" id="itemName" placeholder="Name" required="" minlength="1"></label></div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Category:</strong><br><input class="form-control" type="text" id="itemCategory" placeholder="Category" required="" minlength="1"></label></div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Quantity:</strong><br><input class="form-control" type="number" id="itemQuantity" placeholder="Quantity" required="" min="0" step="1"></label></div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Price:</strong><br><input class="form-control" type="number" id="itemPrice" required="" placeholder="Price" min="1" step="1"></label></div>
+                  <div class="form-group" style="height: 165px;"><label style="font-size: 20px;"><strong>Image:</strong><br><input class="form-control" type="url" id="imageUrl" placeholder="Image URL" style="margin-bottom: 20px;"><input type="file" id="imageFile" rows="7" cols="50"></label>
+                      <small
+                          class="form-text text-muted" style="font-size: 15px;"><em>Chose either by 'URL' or by 'File' for image selection</em></small>
+                  </div>
+                  <div class="form-group"><label style="font-size: 20px;"><strong>Description:</strong><textarea class="form-control" id="itemDescription" rows="7" cols="50" required="" minlength="1" placeholder="Description" spellcheck="true" wrap="soft" maxlength="500"></textarea><br></label></div>
+              </form><button class="btn btn-primary" type="button" style="background-color: rgb(79,121,96);font-size: 20px;margin-bottom: 15px;">Submit Item</button></div>
+      </div>
+  </div>
+
+
 <input type=button value="logout" onClick="eraseCookie()"/>
 <script src="../javascripts/addItem.js" async></script>
 <script src="../javascripts/client.js" async></script>
