--- a/views/admin_dashboard-manage_orders-sub_order.hbs
+++ b/views/admin_dashboard-manage_orders-sub_order.hbs
@@ -1,3 +1,71 @@
+<header></header><a href="/admin_dashboard/manage_accounts" style="margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);font-size: 20px;">Back To Orders</a>
+  <div class="container-fluid text-center border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;max-width: 960px;padding-top: 15px;padding-bottom: 15px;padding-right: 50px;padding-left: 50px;height: 756px;">
+      <h1 class="text-center" style="color: rgb(133,135,150);font-size: 28px;height: 90px;">Order Details</h1>
+      <div class="row">
+          <div class="col">
+              <div class="table-responsive" style="margin-top: 25px;padding: 10px;height: 544px;">
+                  <table class="table table-hover">
+                      <thead>
+                          <tr></tr>
+                      </thead>
+                      <tbody>
+                          <tr>
+                              <td>Order Number</td>
+                              <td id="orderNumber">{Order Number}</td>
+                          </tr>
+                          <tr>
+                              <td>Order Date</td>
+                              <td id="orderDate">{Order Date}</td>
+                          </tr>
+                          <tr>
+                              <td>Order Time</td>
+                              <td id="orderTime">{orderTime}</td>
+                          </tr>
+                          <tr>
+                              <td>Customer Number</td>
+                              <td id="customerNumber">{customerNumber}</td>
+                          </tr>
+                          <tr>
+                              <td>Order Total</td>
+                              <td id="orderTotal">{orderTotal}</td>
+                          </tr>
+                          <tr>
+                              <td>Quantity</td>
+                              <td id="orderQuantity">{quantity}</td>
+                          </tr>
+                          <tr>
+                              <td>Credit ID</td>
+                              <td id="creditID">{creditID}</td>
+                          </tr>
+                          <tr>
+                              <td>Shipper ID</td>
+                              <td id="shipperID">{shipperID}</td>
+                          </tr>
+                          <tr>
+                              <td>Tracking ID</td>
+                              <td id="trackingID">{trackingID}</td>
+                          </tr>
+                          <tr>
+                              <td>Tracking Number</td>
+                              <td id="trackingNumber">{trackingNumber}</td>
+                          </tr>
+                          <tr>
+                              <td>Item ID</td>
+                              <td id="itemID">{itemID}</td>
+                          </tr>
+                          <tr>
+                              <td>Merchant ID</td>
+                              <td id="merchantID">{merchantID}</td>
+                          </tr>
+                          <tr></tr>
+                      </tbody>
+                  </table>
+              </div>
+          </div>
+      </div>
+  </div>
+
+
 <input type=button value="logout" onClick="eraseCookie()"/>
 <h2> ADMIN ACCOUNT ORDERS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
