Fixed up more admin pages

--- a/views/admin_dashboard-manage_accounts.hbs
+++ b/views/admin_dashboard-manage_accounts.hbs
@@ -125,7 +125,7 @@
   </div>
 
 <input type=button value="logout" onClick="eraseCookie()"/>
-<h2> ADMIN ACCOUNT ACCOUNTS PAGE!!!! </h2>
+<!-- <h2> ADMIN ACCOUNT ACCOUNTS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
 <h2> {{email}} </h2>
 
@@ -172,7 +172,7 @@
 </tr>
 {{/each}}
 </table>
-<h1> END ACCOUNTS </h1>
+<h1> END ACCOUNTS </h1> -->
 
 <script> function eraseCookie() {
   // make the api call
