--- a/views/admin_dashboard-manage_inventory-create_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory-create_inventory.hbs
@@ -25,7 +25,7 @@
   </div>
 
 <input type=button value="logout" onClick="eraseCookie()"/>
-<script src="../../javascripts/addItem.js" async></script>
+<!-- <script src="../../javascripts/addItem.js" async></script>
 <script src="../javascripts/client.js" async></script>
 <h2> ADMIN ACCOUNT CREATE INVENTORY PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
@@ -102,7 +102,7 @@
       </tr>
     {{/each}}
   </table>
-<h1> END ITEMS </h1>
+<h1> END ITEMS </h1> -->
 
 <script> function eraseCookie() {
   // make the api call
