--- a/views/admin_dashboard-manage_inventory-sub_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory-sub_inventory.hbs
@@ -27,7 +27,7 @@
 <input type=button value="logout" onClick="eraseCookie()"/>
 <script src="../javascripts/addItem.js" async></script>
 <script src="../javascripts/client.js" async></script>
-<h2> ADMIN ACCOUNT SUB INVENTORY PAGE!!!! </h2>
+<!-- <h2> ADMIN ACCOUNT SUB INVENTORY PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
 <h2> {{email}} </h2>
 
@@ -63,7 +63,7 @@
         <td> <img src="{{itemimagelink}}"> </td>
       </tr>
     {{/each}}
-  </table>
+  </table> -->
 <h1> END ITEMS </h1>
 
 <script> function eraseCookie() {
