--- a/views/admin_dashboard-manage_orders.hbs
+++ b/views/admin_dashboard-manage_orders.hbs
@@ -112,7 +112,7 @@
       </div>
   </div>
 <input type=button value="logout" onClick="eraseCookie()"/>
-<h2> ADMIN ACCOUNT ORDERS PAGE!!!! </h2>
+<!-- <h2> ADMIN ACCOUNT ORDERS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
 <h2> {{email}} </h2>
 
@@ -153,7 +153,7 @@
       <td> {{trackingid}} </td>
     </tr>
   {{/each}}
-</table>
+</table> -->
 <script> function eraseCookie() {
   // make the api call
   fetch("/api/logout",
