--- a/views/admin_dashboard-manage_accounts-sub_account.hbs
+++ b/views/admin_dashboard-manage_accounts-sub_account.hbs
@@ -83,7 +83,7 @@
 
 
 <input type=button value="logout" onClick="eraseCookie()"/>
-<h2> ADMIN ACCOUNT SUB ACCOUNTS PAGE!!!! </h2>
+<!-- <h2> ADMIN ACCOUNT SUB ACCOUNTS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
 <h2> {{email}} </h2>
 
@@ -126,7 +126,7 @@
   <td>{{isadmin}}</td>
 </tr>
 {{/each}}
-</table>
+</table> -->
 <h1> END ACCOUNTS </h1>
 
 <script> function eraseCookie() {
