--- a/views/admin_dashboard-manage_orders-sub_order.hbs
+++ b/views/admin_dashboard-manage_orders-sub_order.hbs
@@ -67,7 +67,7 @@
 
 
 <input type=button value="logout" onClick="eraseCookie()"/>
-<h2> ADMIN ACCOUNT ORDERS PAGE!!!! </h2>
+<!-- <h2> ADMIN ACCOUNT ORDERS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
 <h2> {{email}} </h2>
 
@@ -108,7 +108,7 @@
       <td> {{trackingid}} </td>
     </tr>
   {{/each}}
-</table>
+</table> -->
 <script> function eraseCookie() {
   // make the api call
   fetch("/api/logout",
