Added more links + comments

--- a/views/admin_dashboard-manage_inventory-sub_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory-sub_inventory.hbs
@@ -2,7 +2,7 @@
 
 <!--This is create inventory and sub-->
 
-<header></header><a href="userDashboard.html" style="margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);font-size: 20px;">Back To Inventory</a>
+<header></header><a href="/admin_dashboard/manage_inventory" style="margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);font-size: 20px;">Back To Inventory</a>
   <div class="container-fluid text-center border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;max-width: 960px;padding-top: 15px;padding-bottom: 15px;padding-right: 50px;padding-left: 50px;">
       <h5 class="text-left" style="color: rgb(133,135,150);font-size: 28px;height: 90px;padding-top: 30px;"><strong>Inventory Item</strong></h5>
       <div class="row">
