--- a/views/admin_dashboard-manage_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory.hbs
@@ -18,7 +18,7 @@
                       </div>
                       <div class="card-body">
                           <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Manage Inventory</h4>
-                          <div class="text-right"><button class="btn btn-primary" type="button" style="margin-top: 15px;background-color: rgb(79,121,96);font-size: 18px;">Add Item</button></div>
+                          <div class="text-right"><a href = "/admin_dashboard/manage_inventory/create_inventory"><button class="btn btn-primary" type="button" style="margin-top: 15px;background-color: rgb(79,121,96);font-size: 18px;">Add Item</button></a></div>
                           <div class="col align-self-center m-auto">
                               <h4 style="margin-top: 35px;"><em>Inventory List</em></h4>
                               <div class="table-responsive" style="margin-top: 40px;padding: 10px;height: 280px;">
