--- a/views/admin_dashboard.hbs
+++ b/views/admin_dashboard.hbs
@@ -19,7 +19,7 @@
                       <div class="card-body">
                           <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Account Dashboard</h4>
                           <div class="col align-self-center m-auto">
-                              <h4 style="margin-top: 65px;"><em>Recent Order(s)</em></h4><a href="#">View All Orders</a>
+                              <h4 style="margin-top: 65px;"><em>Recent Order(s)</em></h4><a href="/admin_dashboard/manage_orders">View All Orders</a>
                               <div class="table-responsive" style="margin-top: 40px;padding: 10px;height: 280px;">
                                   <table class="table table-hover">
                                       <thead>
