--- a/views/admin_dashboard-manage_orders-sub_order.hbs
+++ b/views/admin_dashboard-manage_orders-sub_order.hbs
@@ -1,9 +1,17 @@
+<!--File: admin_dashboard-manage_orders-sub_order.hbs-->
+<!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
+<!--Date: 11/10/2019-->
+<!--Description: This is the body of the admin_dashboard-manage_orders-sub_order page-->
+
+<!--This is the button on the top that brings you back to the manage accounts page-->
 <header></header><a href="/admin_dashboard/manage_accounts" style="margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);font-size: 20px;">Back To Orders</a>
   <div class="container-fluid text-center border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;max-width: 960px;padding-top: 15px;padding-bottom: 15px;padding-right: 50px;padding-left: 50px;height: 756px;">
+      <!--This is the order details section-->
       <h1 class="text-center" style="color: rgb(133,135,150);font-size: 28px;height: 90px;">Order Details</h1>
       <div class="row">
           <div class="col">
               <div class="table-responsive" style="margin-top: 25px;padding: 10px;height: 544px;">
+                  <!--This is the table that has all the order detail-->
                   <table class="table table-hover">
                       <thead>
                           <tr></tr>
@@ -65,7 +73,7 @@
       </div>
   </div>
 
-
+<!--This is the logout button-->
 <input type=button value="logout" onClick="eraseCookie()"/>
 <!-- <h2> ADMIN ACCOUNT ORDERS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
