--- a/views/admin_dashboard-manage_accounts-sub_account.hbs
+++ b/views/admin_dashboard-manage_accounts-sub_account.hbs
@@ -1,10 +1,16 @@
+<!--File: admin_dashboard-manage_accounts-sub_account.hbs-->
+<!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
+<!--Date: 11/10/2019-->
+<!--Description: This is the body of the admin_dashboard-manage_accounts-sub_account page-->
 
+<!--This is the go to the manage accounts page-->
 <header></header><a href="admin_dashboard/manage_accounts" style="margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);font-size: 20px;">Back To Accounts</a>
   <div class="container-fluid text-center border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;max-width: 960px;padding-top: 15px;padding-bottom: 15px;padding-right: 50px;padding-left: 50px;">
       <h1 class="text-center" style="color: rgb(133,135,150);font-size: 28px;height: 90px;">Account Details</h1>
       <div class="row">
           <div class="col align-self-center m-auto">
               <div class="table-responsive" style="margin-top: 25px;padding: 10px;">
+                  <!--This is the table for the accounts that exists in the table-->
                   <table class="table table-hover">
                       <thead>
                           <tr></tr>
@@ -78,10 +84,12 @@
                   </table>
               </div>
           </div>
-      </div><button class="btn btn-primary" id="editAccountInformation" type="button" style="background-color: rgb(79,121,96);margin-top: 15px;font-size: 18px;">Edit Information</button><button class="btn btn-primary text-center" id="sumbitChanges" type="button"
-          style="background-color: rgb(100,117,207);margin-top: 15px;font-size: 18px;display:none;">Submit Changes</button><button class="btn btn-primary" id="cancelChanges" type="button" style="background-color: rgb(129,130,133);margin-top: 15px;font-size: 18px;display: none;">Cancel</button></div>
+      </div><button class="btn btn-primary" id="editAccountInformation" type="button" style="background-color: rgb(79,121,96);margin-top: 15px;font-size: 18px;">Edit Information</button>
+      <button class="btn btn-primary text-center" id="sumbitChanges" type="button"
+          style="background-color: rgb(100,117,207);margin-top: 15px;font-size: 18px;display:none;">Submit Changes</button>
+          <button class="btn btn-primary" id="cancelChanges" type="button" style="background-color: rgb(129,130,133);margin-top: 15px;font-size: 18px;display: none;">Cancel</button></div>
 
-
+<!--This is the logout function-->
 <input type=button value="logout" onClick="eraseCookie()"/>
 <!-- <h2> ADMIN ACCOUNT SUB ACCOUNTS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
@@ -127,7 +135,7 @@
 </tr>
 {{/each}}
 </table> -->
-<h1> END ACCOUNTS </h1>
+<!--<h1> END ACCOUNTS </h1> -->
 
 <script> function eraseCookie() {
   // make the api call
