--- a/views/admin_dashboard-manage_inventory-create_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory-create_inventory.hbs
@@ -1,14 +1,20 @@
-
-
+<!--File: admin_dashboard-manage_inventory-create_inventory.hbs-->
+<!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
+<!--Date: 11/10/2019-->
+<!--Description: This is the body of the admin_dashboard-manage_inventorry-create_inventory page-->
 
 <!--This is create inventory and sub-->
 
+<!--This is the link that brings us back to the inventory page-->
 <header></header><a href="/admin_dashboard/manage_inventory" style="margin-left: 40px;margin-top: 0px;color: rgb(133,135,150);font-size: 20px;">Back To Inventory</a>
   <div class="container-fluid text-center border rounded shadow-sm" style="background-color: #ffffff;margin-top: 60px;max-width: 960px;padding-top: 15px;padding-bottom: 15px;padding-right: 50px;padding-left: 50px;">
       <h5 class="text-left" style="color: rgb(133,135,150);font-size: 28px;height: 90px;padding-top: 30px;"><strong>Inventory Item</strong></h5>
       <div class="row">
           <div class="col text-left">
-              <form>
+              <!--This is the form to create an item-->
+
+              <!--Come back and double check the action-->
+              <form method = "post" action = "/api/create_inventory">
                   <div class="form-group"><label style="font-size: 20px;"><strong>Item ID:</strong><input class="form-control" type="number" id="itemID" required="" min="0" step="1" placeholder="Item ID"></label></div>
                   <div class="form-group"><label style="font-size: 20px;"><strong>Merchant ID:</strong><input class="form-control" type="number" id="merchantID" min="0" step="1" required="" placeholder="Merchant ID"></label></div>
                   <div class="form-group"><label style="font-size: 20px;"><strong>Item Name:</strong><br><input class="form-control" type="text" id="itemName" placeholder="Name" required="" minlength="1"></label></div>
@@ -24,6 +30,8 @@
       </div>
   </div>
 
+
+<!--This is the log out button-->
 <input type=button value="logout" onClick="eraseCookie()"/>
 <!-- <script src="../../javascripts/addItem.js" async></script>
 <script src="../javascripts/client.js" async></script>
