--- a/views/admin_dashboard-manage_inventory.hbs
+++ b/views/admin_dashboard-manage_inventory.hbs
@@ -1,3 +1,7 @@
+<!--File: admin_dashboard-manage_inventory.hbs-->
+<!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
+<!--Date: 11/10/2019-->
+<!--Description: This is the body of the admin_dashboard-manage_inventory page-->
 <div style="margin-top: 30px;margin-bottom: 50px;">
       <div class="container-fluid">
           <div class="row">
@@ -5,6 +9,7 @@
                   <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {userName}!</strong></h1>
               </div>
           </div>
+          <!--This is the part that has the nav bar with the dashboard, manage inventory, manage orders, and manage accounts-->
           <div class="row justify-content-center align-items-center" style="height: 100%;">
               <div class="col-auto col-sm-11 col-md-9 col-lg-9 col-xl-11 text-break text-center align-self-center m-auto" style="padding: 5px;padding-left: 40px;">
                   <div class="card">
@@ -16,12 +21,15 @@
                               <li class="nav-item"><a class="nav-link" href="/admin_dashboard/manage_accounts" style="font-size: 20px;">Manage Accounts</a></li>
                           </ul>
                       </div>
+                      <!--This is manage inventory section on the top of page-->
                       <div class="card-body">
                           <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Manage Inventory</h4>
                           <div class="text-right"><a href = "/admin_dashboard/manage_inventory/create_inventory"><button class="btn btn-primary" type="button" style="margin-top: 15px;background-color: rgb(79,121,96);font-size: 18px;">Add Item</button></a></div>
                           <div class="col align-self-center m-auto">
+                              <!--This is the inventory list-->
                               <h4 style="margin-top: 35px;"><em>Inventory List</em></h4>
                               <div class="table-responsive" style="margin-top: 40px;padding: 10px;height: 280px;">
+                                  <!--This is the table with the inventory items-->
                                   <table class="table table-hover">
                                       <thead>
                                           <tr>
@@ -72,6 +80,7 @@
       </div>
   </div>
 
+<!--This is the logout button-->
 <input type=button value="logout" onClick="eraseCookie()"/>
 <script src="../javascripts/addItem.js" async></script>
 <script src="../javascripts/client.js" async></script>
