--- a/views/admin_dashboard-manage_orders.hbs
+++ b/views/admin_dashboard-manage_orders.hbs
@@ -1,10 +1,17 @@
+<!--File: admin_dashboard-manage_orders.hbs-->
+<!--Authors: Alex Antaki, Matthew Oakley, Alex Mahlmeister, Raislan Aiken, and Jaspreet Singh-->
+<!--Date: 11/10/2019-->
+<!--Description: This is the body of the admin_dashboard-manage_orders page-->
+
 <div style="margin-top: 30px;margin-bottom: 50px;">
       <div class="container-fluid">
           <div class="row">
+              <!--This is the welcome message the user sees-->
               <div class="col-md-12 offset-xl-1" style="margin-top: 25px;height: 90px;margin-bottom: 10px;">
                   <h1 id="welcomeName" style="color: rgb(133,135,150);font-size: 35px;"><strong>Hi There, {userName}!</strong></h1>
               </div>
           </div>
+          <!--This is the nav bar that has the dashboard, manage inventory, manage orders, manage accounts-->
           <div class="row justify-content-center align-items-center" style="height: 100%;">
               <div class="col-auto col-sm-11 col-md-9 col-lg-9 col-xl-11 text-break text-center align-self-center m-auto" style="padding: 5px;padding-left: 40px;">
                   <div class="card">
@@ -16,10 +23,12 @@
                               <li class="nav-item"><a class="nav-link" href="/admin_dashboard/manage_accounts" style="font-size: 20px;">Manage Accounts</a></li>
                           </ul>
                       </div>
+                      <!--This is the manage orders sub section on the page-->
                       <div class="card-body">
                           <h4 class="card-title" style="font-size: 28px;margin-top: 20px;">Manage Order(s)</h4>
                           <div class="col align-self-center m-auto">
                               <div class="table-responsive" style="margin-top: 40px;padding: 10px;">
+                                  <!--This is the table of orders-->
                                   <table class="table table-hover">
                                       <thead>
                                           <tr>
@@ -111,6 +120,9 @@
           </div>
       </div>
   </div>
+
+
+<!--This is the log out button--> 
 <input type=button value="logout" onClick="eraseCookie()"/>
 <!-- <h2> ADMIN ACCOUNT ORDERS PAGE!!!! </h2>
 <h2> THEY DO!!!! 🐐🐐🐐🐐🐐🐐🐐🐐 </h2>
