Added more to the layout and user dashboard

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -67,6 +67,7 @@
     <script src="/bootstrap/js/theme.js?h=6d33b44a6dcb451ae1ea7efc7b5c5e30"></script>
     <script src="/javascripts/addItem.js"></script>
     <script src="/javascripts/login.js"></script>
+    <script src="/javascripts/editAccount.js"></script>
     <script src="/javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610" async></script>
 </head>
 
