--- a/views/check_out.hbs
+++ b/views/check_out.hbs
@@ -23,12 +23,13 @@
                             <div class="form-group" style="padding-left: 10px;"><select class="custom-select" id="deliveryMethod" style="width: 270px;margin-top: 20px;height: 45px;font-size: 17px;"><optgroup label="Delivery Method"><option value="shipToAddress" selected="">Ship To Address</option><option value="pickUpInStore">Pick Up In Store (No Additional Fee)</option></optgroup></select></div>
                         </form>
                         <p style="margin-top: 40px;font-size: 22px;margin-bottom: 30px;">Please Fill Out The Information Below</p>
+                        {{#each customerInfo}}
                         <div id="shipToAddress" style="display:block;">
                             <div class="form-row" style="padding-left: 10px;">
 
                                 <div class="col-sm-7" id="recipientName">
 
-                                    <div class="form-group"><label for="card-holder" style="font-size: 17px;"><strong>First Name</strong></label><input class="form-control" type="text" id="recipientName" onchange="verifyName(this.value, id)" placeholder="First Name" minlength="1" required="">
+                                    <div class="form-group"><label for="card-holder" style="font-size: 17px;"><strong>First Name</strong></label><input class="form-control" type="text" id="recipientName" onchange="verifyName(this.value, id)" placeholder="First Name" value="{{firstname}}"minlength="1" required="">
                                     <!--This is the validation funciton for the recipient name-->
                                     <script type = "text/javascript">
                                       function verifyName(name, id){
@@ -44,7 +45,7 @@
 
                                     <div class="col-sm-7" id="recipientName">
 
-                                        <div class="form-group"><label for="card-holder" style="font-size: 17px;"><strong>Last Name</strong></label><input class="form-control" type="text" id="recipientName" onchange="verifyName(this.value, id)" placeholder="Last Name" minlength="1" required="">
+                                        <div class="form-group"><label for="card-holder" style="font-size: 17px;"><strong>Last Name</strong></label><input class="form-control" type="text" id="recipientName" onchange="verifyName(this.value, id)" placeholder="Last Name" value="{{lastname}}" minlength="1" required="">
                                         <!--This is the validation funciton for the recipient name-->
                                         <script type = "text/javascript">
                                           function verifyName(name, id){
@@ -58,7 +59,7 @@
                                 </div>
                                 <!--This is the phone number-->
                                 <div class="col-sm-7" id="phoneNumber" style="height: 87px;">
-                                    <div class="form-group" style="height: 27px;"><label for="card-holder" style="font-size: 17px;"><strong>Phone Number (No dashes needed)</strong></label><input class="form-control" type="tel" onchange="verifyPhoneNum(this.value, id)" id="phoneNumber" placeholder="Phone Number" required="" minlength="1" maxlength = "13" inputmode="tel">
+                                    <div class="form-group" style="height: 27px;"><label for="card-holder" style="font-size: 17px;"><strong>Phone Number (No dashes needed)</strong></label><input class="form-control" type="tel" onchange="verifyPhoneNum(this.value, id)" id="phoneNumber" placeholder="Phone Number" value="{{phonehome}}" required="" minlength="1" maxlength = "13" inputmode="tel">
                                       <!--This is the validation function for the phone number-->
                                       <script type = "text/javascript">
                                         function verifyPhoneNum(number, id){
@@ -72,7 +73,7 @@
                                 </div>
                                 <!--This is the address box-->
                                 <div class="col-sm-8" id="address1">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Address 1</strong></label><input class="form-control" type="text" onchange="verifyAddress(this.value, id)"  id="shippingAddress1" placeholder="Address 1" required="" minlength="1">
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Address 1</strong></label><input class="form-control" type="text" onchange="verifyAddress(this.value, id)"  value="{{address1}}" id="shippingAddress1" placeholder="Address 1" required="" minlength="1">
                                       <!--This is the validation function for the address-->
                                       <script type = "text/javascript">
                                         function verifyAddress(address, id){
@@ -91,7 +92,7 @@
                                 </div>
                                 <!--This is the address 2 section-->
                                 <div class="col-sm-8" id="address2">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Address 2</strong></label><input class="form-control" type="text" onchange="verifyAddress2(this.value, id)" id="shippingAddress2" placeholder="Address 2">
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Address 2</strong></label><input class="form-control" type="text" onchange="verifyAddress2(this.value, id)" id="shippingAddress2" value="{{address2}}" placeholder="Address 2">
                                       <!--This is the validation script for the address-->
                                       <script type = "text/javascript">
                                         function verifyAddress2(address, id){
@@ -111,7 +112,7 @@
                                 </div>
                                 <!--This is the city field-->
                                 <div class="col-sm-8 col-xl-5 offset-xl-0" id="city">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>City</strong></label><input class="form-control" onchange = "verifyCity(this.value, id)" type="text" id="shippingCity" placeholder="City" required="" minlength="1">
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>City</strong></label><input class="form-control" onchange = "verifyCity(this.value, id)" type="text" id="shippingCity" value="{{citycode}}" placeholder="City" required="" minlength="1">
                                       <!--This is validation for the city field-->
                                       <script type = "text/javascript">
                                         function verifyCity(city, id){
@@ -125,7 +126,7 @@
                                 </div>
                                 <!--This is the zip code-->
                                 <div class="col-sm-8 col-xl-3" id="zipCode">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Zip Code</strong></label><input class="form-control" type="text" onchange = "verifyZip(this.value, id)" id="shippingZipCode" placeholder="Zip Code" required="" minlength="5" maxlength = "5" pattern="/(^\d{5}$)|(^\d{5}-\d{4}$)/"
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>Zip Code</strong></label><input class="form-control" type="text" onchange = "verifyZip(this.value, id)" id="shippingZipCode" placeholder="Zip Code" value="{{postcode}}" required="" minlength="5" maxlength = "5" pattern="/(^\d{5}$)|(^\d{5}-\d{4}$)/"
                                             inputmode="numeric">
                                         <!--This is the validation for the zip-->
                                         <script type = "text/javascript">
@@ -142,7 +143,7 @@
                                 </div>
                                 <!--This is the state-->
                                 <div class="col-sm-8 col-xl-3" id="state">
-                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>State (Two Letter, "NY" or "FL")</strong></label><input class="form-control" type="text" id="shippingState" onchange = "verifyState(this.value, id)" placeholder="State" required="" minlength="2" maxlength="2">
+                                    <div class="form-group"><label for="card-number" style="font-size: 17px;"><strong>State (Two Letter, "NY" or "FL")</strong></label><input class="form-control" type="text" id="shippingState" value="{{statecode}}" onchange = "verifyState(this.value, id)" placeholder="State" required="" minlength="2" maxlength="2">
                                       <!--This is the validation for the state-->
                                       <script type = "text/javascript">
                                         function verifyState(state, id){
@@ -158,6 +159,7 @@
                             </div>
                         </div>
                       </div>
+                      {{/each}}
                         <div class="col-sm-12" id="proceed">
                             <div class="form-group"><button class="btn btn-primary btn-block" id="proceedShipping" type="button" style="background-color: rgb(79,121,96);margin-top: 20px;height: 40px;font-size: 20px;">Proceed</button></div>
                         </div>
@@ -172,46 +174,25 @@
                             <div class="col-sm-auto col-md-auto col-lg-auto col-xl-7" style="overflow: auto;height: 300px;padding: 5px;">
                                 <div class="items">
                                     <div class="product">
+                                      {{#each items}}
                                         <!--These divs are they product listings on the left hand side-->
+
                                         <div class="form-row justify-content-center align-items-center" style="margin-bottom: 5px;margin-top: 5px;padding-top: 5px;padding-right: 5px;padding-bottom: 5px;padding-left: 5px;">
-                                            <div class="col" id="nameOfItem"><a class="product-name" href="#" style="font-size: 20px;">Cupcake</a></div>
+                                            <div class="col" id="nameOfItem"><a class="product-name" href="/marketItem/{{itemId}}" style="font-size: 20px;">{{name}}</a></div>
                                             <!--This is where the price per unit area is-->
+
                                             <div class="col-md-5 col-xl-4 product-info">
                                                 <div class="product-specs">
-                                                    <div><span>Price Per Unit:&nbsp;</span><span id="pricePerUnit" class="value">$4.00</span></div>
+                                                    <div><span>Price Per Unit:&nbsp;</span><span id="pricePerUnit" class="value">${{price}}</span></div>
                                                 </div>
                                             </div>
                                             <!--This is the total price section-->
-                                            <div class="col-6 col-md-2 col-xl-2 quantity"><label class="d-none d-md-block" for="quantity">Quantity</label><input class="form-control form-control quantity-input" type="number" id="quantity" value="1" readonly=""></div>
+
+                                            <div class="col-6 col-md-2 col-xl-2 quantity"><label class="d-none d-md-block" for="quantity">Quantity</label><input class="form-control form-control quantity-input" type="number" id="quantity" value="{{quantity}}" readonly=""></div>
                                             <div class="col-6 col-md-2 col-xl-2 text-right price"
-                                                id="totalItemPrice" style="margin-top: 5px;"><span id="totalItemPrice">$4.00</span></div>
+                                                id="totalItemPrice" style="margin-top: 5px;"><span id="totalItemPrice">${{total}}</span></div>
                                         </div>
-                                        <div class="form-row justify-content-center align-items-center" style="margin-bottom: 5px;margin-top: 5px;padding: 5px;padding-top: 5px;padding-right: 5px;">
-                                            <div class="col" id="nameOfItem"><a class="product-name" href="#" style="font-size: 20px;">Cupcake</a></div>
-                                            <!--This is the price per unit area for the next item-->
-                                            <div class="col-md-5 col-xl-4 product-info">
-                                                <div class="product-specs">
-                                                    <div><span>Price Per Unit:&nbsp;</span><span id="pricePerUnit" class="value">$4.00</span></div>
-                                                </div>
-                                            </div>
-                                            <!--This is the quantity section-->
-                                            <div class="col-6 col-md-2 col-xl-2 quantity"><label class="d-none d-md-block" for="quantity">Quantity</label><input class="form-control form-control quantity-input" type="number" id="quantity" value="1" readonly=""></div>
-                                            <div class="col-6 col-md-2 col-xl-2 text-right price"
-                                                style="margin-top: 5px;"><span id="totalItemPrice">$4.00</span></div>
-                                        </div>
-                                        <!--This is the second item in the row-->
-                                        <div class="form-row justify-content-center align-items-center" style="margin-bottom: 5px;margin-top: 5px;">
-                                            <div class="col" id="nameOfItem"><a class="product-name" href="#" style="font-size: 20px;">Cupcake</a></div>
-                                            <div class="col-md-5 col-xl-4 product-info">
-                                                <div class="product-specs">
-                                                    <div><span>Price Per Unit:&nbsp;</span><span id="pricePerUnit" class="value">$4.00</span></div>
-                                                </div>
-                                            </div>
-                                            <div class="col-6 col-md-2 col-xl-2 quantity"><label class="d-none d-md-block" for="quantity">Quantity</label><input class="form-control form-control quantity-input" type="number" id="quantity" value="1" readonly=""></div>
-                                            <div class="col-6 col-md-2 col-xl-2 text-right price"
-                                                style="margin-top: 5px;"><span id="totalItemPrice">$4.00</span></div>
-                                        </div>
-                                    </div>
+                                      {{/each}}
                                 </div>
                             </div>
                             <!--This is the summary page at the end of the checkout section-->
@@ -233,7 +214,7 @@
                         <p style="font-size: 20px;margin-bottom: 30px;">Want To Use Goat Points With Your Order?<br>Just Click Apply To Use It Towards Your Balance!</p>
                         <div class="form-row">
                             <div class="col-sm-8">
-                                <div class="form-group"><label for="card-number"><strong>Goat Points Balance:</strong></label><input class="form-control" type="text" id="goatPointBalance" style="width: 250px;" readonly="" placeholder="Goat Points"></div>
+                                <div class="form-group"><label for="card-number"><strong>Goat Points Balance:</strong></label><input class="form-control" type="text" id="goatPointBalance" style="width: 250px;" value="{{goatPoints}}"readonly="" placeholder="Goat Points"></div>
                             </div>
                             <div class="col-sm-12">
                                 <div class="form-group"><button class="btn btn-primary" id="applyGoatPoints" type="button" style="background-color: rgb(79,121,96);margin-top: 20px;height: 40px;">Apply Goat Points</button><button class="btn btn-primary" id="unapplyGoatPoints"
