No longer have javascript in front end pages for validating purposes

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -68,6 +68,7 @@
     <script src="/javascripts/addItem.js"></script>
     <script src="/javascripts/login.js"></script>
     <script src="/javascripts/editAccount.js"></script>
+    <script src="/javascripts/validation.js"></script>
     <script src="/javascripts/script.min.js?h=f61c25f2cf09fbf27b6a6183faa71610" async></script>
 </head>
 
@@ -95,7 +96,7 @@
                               class="dropdown-menu dropdown-list dropdown-menu-right animated--grow-in" role="menu">
                               <h6 class="dropdown-header" style="font-size: 14px;background-color: rgb(180,116,66);" href = "/cart">My basket</h6>
                               <a class="d-flex align-items-center dropdown-item" href="#">
-                                  <div class="text-center float-left dropdown-list-image mr-3"><img class="rounded-circle" src="images/bogart.jpg?h=e60673f3dcbecae44bc43ea5761f59d0" style="width: 50px;height: 50px;"></div>
+                                  <div class="text-center float-left dropdown-list-image mr-3"><img class="rounded-circle" style="width: 50px;height: 50px;"></div>
                                   <div class="font-weight-bold">
                                       <div class="text-truncate"><span style="font-size: 15px;">Bogart</span></div>
                                       <p class="small text-gray-500 mb-0" style="font-size: 13px;">Price Per Unit: $12.00&nbsp;<br>Quantity: 1</p>
