--- a/views/forgot_password.hbs
+++ b/views/forgot_password.hbs
@@ -21,19 +21,12 @@
                             <h4 class="text-dark mb-2" style="font-size: 33px;">Forgot Your Password?</h4>
                             <p class="mb-4" style="font-size: 17px;">We get it, stuff happens. Just enter your email address below and we'll send you a link to reset your password!</p>
                         </div>
-                        <form class="user" action = "/api/forgotPassword" method = "post">
+                        <form class="user" action = "/api/forgot_password" method = "post">
                             <!--This is where the user inputs their email and we can see the filler text of enter email address-->
-                            <div class="form-group"><input class="form-control form-control-user" type="email" onchange = "verifyEmailAddress(this.value, id)" id="email" aria-describedby="emailHelp" placeholder="Enter Email Address..." name="email" style="font-size: 18px;">
-                              <script type = "text/javascript">
-                                function verifyEmailAddress(email, id){
-                                  var emailAddressRegExp = new RegExp(/^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/);
-                                  if(emailAddressRegExp.test(email) != true){
-                                    alert("Please follow the format of: emailaddress@example.com");
-                                  }
-                                }
-                              </script>
+                            <div class="form-group"><input class="form-control form-control-user" type="text"  id="email" placeholder="Enter Email Address..." name="email" style="font-size: 18px;">
+                      
                              </div><button class="btn btn-primary btn-block text-white btn-user"
-                                type="submit" style="font-size: 18px;background-color: rgb(79,121,96);">Reset Password</button></form>
+                                type="submit" onclick = "verifyEmailAddress(email.value, id)" style="font-size: 18px;background-color: rgb(79,121,96);">Reset Password</button></form>
                         <div class="text-center">
                             <!--This is the links we see on the bottom that go to create accounts and login pages-->
                             <hr><a class="small" href="/create_account" style="font-size: 16px;">Create an Account!</a></div>
